--- a/data_check/data_check.ipynb
+++ b/data_check/data_check.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "final_df = pd.read_csv('final_tables_merged.csv')\n",
+    "final_df = pd.read_csv('../final_tables_merged.csv')\n",
     "\n",
     "# Initialize an empty DataFrame to store the summary for all files\n",
     "master_df = pd.DataFrame(columns=['Table', 'ID', 'Null Values'])\n",
     "\n",
     "for table in final_df['Table']:\n",
-    "    file_path = f'../Merged_Data/Merged_{table}.csv'  # Construct file path\n",
+    "    file_path = f'../../Merged_Data/Merged_{table}.csv'  # Construct file path\n",
     "    data = pd.read_csv(file_path)  # Load the CSV file\n",
     "    \n",
     "    # Ignore the first two columns\n",
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "# Re-load the Excel file in case it's different from the first one uploaded\n",
-    "df = pd.read_excel('test.xlsx')\n",
+    "df = pd.read_excel('id_type.xlsx')\n",
     "\n",
     "# Create duplicates of the DataFrame with modified 'name' column\n",
     "duplicate_df = df.copy()\n",
