--- a/merge_subject_tables_4.ipynb
+++ b/merge_subject_tables_4.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "322d2831",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
     "        zipcodes_cal = pd.read_csv('data_check/zipcodes_cal870.csv')\n",
     "\n",
     "        # Extract the zip codes from the dataframe\n",
-    "        zip_codes = zipcodes_cal['ZIP_CODE'].tolist()\n",
+    "        zip_codes = zipcodes_cal['zipcode'].tolist()\n",
     "\n",
     "        # Create a mask for the desired zip code range (California) and the zip codes from 'zipcodes_cal870.csv'\n",
     "        mask = (zip_code_nums >= 90001) & (zip_code_nums <= 96162) & (zip_code_nums.isin(zip_codes))\n",
